--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -1,9 +1,13 @@
-<mat-card>
+<mat-card class="card-container">
   <mat-card-header>
     <mat-card-title>Courses</mat-card-title>
   </mat-card-header>
 
   <mat-card-content>
+    <app-courses-list
+      *ngIf="courses$ | async as courses; else spinner"
+      [courses]="courses"
+    ></app-courses-list>
     <ng-template #spinner>
       <mat-spinner diameter="50"></mat-spinner>
     </ng-template>
