--- a/src/app/components/courses-list/courses-list.component.html
+++ b/src/app/components/courses-list/courses-list.component.html
@@ -11,6 +11,21 @@
     <mat-cell *matCellDef="let element">{{ element.category }}</mat-cell>
   </ng-container>
 
+  <!--Actions Column-->
+  <ng-container matColumnDef="actions">
+    <mat-header-cell *matHeaderCellDef class="actions-column">
+      <button mat-flat-button>Add New</button>
+    </mat-header-cell>
+    <mat-cell *matCellDef="let element" class="actions-column">
+      <button mat-icon-button aria-label="Edit course">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button aria-label="Delete course">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-cell>
+  </ng-container>
+
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 </mat-table>
