refactor: separate responsibilities into smart and presentation components

--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -7,6 +7,7 @@
     <app-courses-list
       *ngIf="courses$ | async as courses; else spinner"
       [courses]="courses"
+      (add)="onAdd()"
     ></app-courses-list>
     <ng-template #spinner>
       <mat-spinner diameter="50"></mat-spinner>
