feat: add course editing functionality

--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -8,6 +8,7 @@
       *ngIf="courses$ | async as courses; else spinner"
       [courses]="courses"
       (add)="onAdd()"
+      (edit)="onEdit($event)"
     ></app-courses-list>
     <ng-template #spinner>
       <mat-spinner diameter="50"></mat-spinner>
