--- a/src/app/components/courses-list/courses-list.component.html
+++ b/src/app/components/courses-list/courses-list.component.html
@@ -19,8 +19,8 @@
     <mat-header-cell *matHeaderCellDef class="actions-column">
       <button mat-flat-button (click)="onAdd()">Add New</button>
     </mat-header-cell>
-    <mat-cell *matCellDef="let element" class="actions-column">
-      <button mat-icon-button aria-label="Edit course">
+    <mat-cell *matCellDef="let course" class="actions-column">
+      <button mat-icon-button aria-label="Edit course" (click)="onEdit(course)">
         <mat-icon>edit</mat-icon>
       </button>
       <button mat-icon-button aria-label="Delete course">
