--- a/src/app/components/courses-list/courses-list.component.html
+++ b/src/app/components/courses-list/courses-list.component.html
@@ -23,7 +23,7 @@
       <button mat-icon-button aria-label="Edit course" (click)="onEdit(course)">
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-icon-button aria-label="Delete course">
+      <button mat-icon-button aria-label="Delete course" (click)="onDelete(course)">
         <mat-icon>delete</mat-icon>
       </button>
     </mat-cell>
